--- a/templates/about.html
+++ b/templates/about.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="member-card">
-            <img src="{{ url_for('static', filename='images/Shravani.jpg') }}" alt="Shravani Porje">
+            <img src="{{ url_for('static', filename='images/shravani.jpg') }}" alt="Shravani Porje">
             <h2>Shravani Porje</h2>
             <p><strong>Role:</strong> Frontend Developer<br>Designed UI and layout for the app.</p>
         </div>
@@ -45,7 +45,7 @@
         </div>
 
         <div class="member-card">
-            <img src="{{ url_for('static', filename='images/Pranav.jpg') }}" alt="Pranav Borse">
+            <img src="{{ url_for('static', filename='images/pranav.jpg') }}" alt="Pranav Borse">
             <h2>Pranav Borse</h2>
             <p><strong>Role:</strong> Documentation Lead<br>Prepared reports, presentations & docs.</p>
         </div>
